
- fieldset.py: fixed missing import 

- action adapter interface: fix indention
  [seletz]

- javascript based validator using "validator" plugin for jQueryTools
  (Manca)

- added widgets manager pane in quick edit mode
  (Manca)

- new styles for form and widgets manager
  (Manca)
  
- Fixed Thanks pages radio buttons, where all inputs had their own forms, instead of only one
  (Manca)

1.6.0b3
-------

- Add infrastructure for upgrade steps. (David Glick)

- Form prologues and epilogues weren't showing for anon users.
  Thanks, Ricardo! (Steve)

- Fix styling of quick edit for P4; also header injection. (Steve)

- Fix preferences panel. (Steve McMahon)

- Make sure the non-default profiles don't show up when creating a new site in
  Plone 4. (David Glick)

- Use an LOBTree to store results in the saved data adapter when available
  (i.e. with ZODB>=3.8.x), allowing us to stop keeping track of the result
  count in the _inputItems attribute, thereby greatly reducing the number of
  write conflicts under load. (David Glick)


1.6.0b2
-------

- Adjust ScriptableFields version requirements.

1.6.0b1
-------

 - Accept Canadian postal codes with lowercase letters. (David Glick)

 - Fix issue where the saved data adapter did not save data when using an
   embedded form whose action on success is to traverse to another page.
   (Thomas Buchberger, David Glick)

 - Plone 4 Compatibility.

 - Save Data Adapter now checks for existence of LinguaPlone canonical
   language form's adapter before trying to use it.
   Thanks, Jean-Pascal Houde. Fixes #270.

1.5.5
-----

- Add infrastructure for upgrade steps for the GenericSetup profile.
  (David Glick)

1.5.4
-----

 - Restoring tests to the distribution restored the Windows install problem.
   Yuck. Reverted deletion of MANIFEST.in. Those needing to run the tests
   should check out PFG from svn. (Steve)

1.5.3
-----

 - Don't try to get the recipient e-mail from the owner of the form folder if